--- a/app.css
+++ b/app.css
@@ -162,7 +162,7 @@ select {
   display: block;
 }
 
-#btn {
+.btn {
   display: inline-block;
   background: #ccc;
   padding: 0.8em;
@@ -194,4 +194,8 @@ select {
   width: 30%;
   border: 2px solid yellow;
   margin-bottom: 20px;
+}
+
+.dino_image {
+  width: 250px;
 }
