--- a/app.css
+++ b/app.css
@@ -1,31 +1,22 @@
-/**
- * /* General Styles
- *
- * @format
- */
-
+/* General Styles */
 body {
   background: rgb(111, 208, 224);
-  background: linear-gradient(
-    0deg,
-    rgb(111, 208, 224) 0%,
-    rgb(171, 228, 167) 100%
-  );
-  font-family: "Open Sans", sans-serif;
+  background: linear-gradient(0deg, rgb(111, 208, 224) 0%, rgb(171, 228, 167) 100%);
+  font-family: 'Open Sans', sans-serif;
   text-align: center;
   min-height: 100vh;
 }
 
 h1 {
   margin: 0;
-  font-family: "Frijole", cursive;
+  font-family: 'Frijole', cursive;
   font-size: 3em;
   font-weight: 400;
 }
 
 h2,
 h3 {
-  font-family: "Oswald", sans-serif;
+  font-family: 'Oswald', sans-serif;
 }
 
 @media (min-width: 650px) {
@@ -113,7 +104,7 @@ p {
 }
 
 .grid-item p {
-  background: rgba(000, 000, 000, 0.3);
+  background: rgba(000, 000, 000, .3);
   position: absolute;
   bottom: 0;
   width: 100%;
@@ -138,7 +129,7 @@ form p {
   margin-bottom: 0.3em;
   font-size: 1.3em;
   font-weight: 600;
-  font-family: "Oswald", sans-serif;
+  font-family: 'Oswald', sans-serif;
 }
 
 input {
@@ -162,7 +153,7 @@ select {
   display: block;
 }
 
-.btn {
+#btn {
   display: inline-block;
   background: #ccc;
   padding: 0.8em;
@@ -180,22 +171,4 @@ select {
 .fine-print {
   display: block;
   font-size: 0.7em;
-}
-
-.dino_container {
-  display: flex;
-  flex-wrap: wrap;
-  height: auto;
-  justify-content: space-evenly;
-  background-color: #67a866f9;
-}
-
-#child1 {
-  width: 30%;
-  border: 2px solid yellow;
-  margin-bottom: 20px;
-}
-
-.dino_image {
-  width: 250px;
 }
